samples/_failures_safe/1761393104_577dce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c3c1226.c: In function ‘main’:
./samples/SAFE/__tmp_9c3c1226.c:141:11: error: expected ‘;’ at end of input
  141 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_9c3c1226.c:141:5: error: expected declaration or statement at end of input
  141 |     printf
      |     ^~~~~~
